tests/machine/x/java/string_in_operator.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsstring_in_operator3073869624/001/Main.java:5: error: ')' or ',' expected
	System.out.println("cat" in s);
	                        ^
/tmp/TestCompileValidProgramsstring_in_operator3073869624/001/Main.java:5: error: ';' expected
	System.out.println("cat" in s);
	                             ^
/tmp/TestCompileValidProgramsstring_in_operator3073869624/001/Main.java:6: error: ')' or ',' expected
	System.out.println("dog" in s);
	                        ^
/tmp/TestCompileValidProgramsstring_in_operator3073869624/001/Main.java:6: error: ';' expected
	System.out.println("dog" in s);
	                             ^
4 errors


  1| let s = "catch"
  2| print("cat" in s)
